--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <script type="module" src="./src/index.mjs"></script>
   </body>
 </html>
